--- a/style.css
+++ b/style.css
@@ -246,6 +246,7 @@ nav #e4 {
     .contact{
         width: 100%;
         justify-content: center;
+        align-items: center;
     }
    
     .about-section .section-content {
